src/tests/snapshots/event_query_lang__tests__parser__parse_from_events_using_subquery.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice()).unwrap()
---
attrs:
  pos:
    line: 1
    col: 1
  scope: 1
  tpe: Unspecified
sources:
  - binding: e
    kind:
      Subquery:
        attrs:
          pos:
            line: 2
            col: 3
          scope: 2
          tpe: Unspecified
        sources:
          - binding: e
            kind: Events
        predicate:
          attrs:
            pos:
              line: 3
              col: 9
            scope: 2
            tpe: Unspecified
          value:
            Binary:
              lhs:
                attrs:
                  pos:
                    line: 3
                    col: 9
                  scope: 2
                  tpe: Unspecified
                value:
                  Access:
                    target:
                      attrs:
                        pos:
                          line: 3
                          col: 9
                        scope: 2
                        tpe: Unspecified
                      value:
                        Id: e
                    field: type
              operator: Eq
              rhs:
                attrs:
                  pos:
                    line: 3
                    col: 19
                  scope: 2
                  tpe: Unspecified
                value:
                  String: io.eventsourcingdb.library.book-acquired
        group_by: ~
        order_by: ~
        limit: ~
        projection:
          attrs:
            pos:
              line: 4
              col: 16
            scope: 2
            tpe: Unspecified
          value:
            Record:
              - name: orderId
                value:
                  attrs:
                    pos:
                      line: 4
                      col: 27
                    scope: 2
                    tpe: Unspecified
                  value:
                    Access:
                      target:
                        attrs:
                          pos:
                            line: 4
                            col: 27
                          scope: 2
                          tpe: Unspecified
                        value:
                          Id: e
                      field: id
              - name: value
                value:
                  attrs:
                    pos:
                      line: 4
                      col: 40
                    scope: 2
                    tpe: Unspecified
                  value:
                    Access:
                      target:
                        attrs:
                          pos:
                            line: 4
                            col: 40
                          scope: 2
                          tpe: Unspecified
                        value:
                          Access:
                            target:
                              attrs:
                                pos:
                                  line: 4
                                  col: 40
                                scope: 2
                                tpe: Unspecified
                              value:
                                Id: e
                            field: data
                      field: total
predicate:
  attrs:
    pos:
      line: 6
      col: 7
    scope: 1
    tpe: Unspecified
  value:
    Binary:
      lhs:
        attrs:
          pos:
            line: 6
            col: 7
          scope: 1
          tpe: Unspecified
        value:
          Access:
            target:
              attrs:
                pos:
                  line: 6
                  col: 7
                scope: 1
                tpe: Unspecified
              value:
                Id: e
            field: value
      operator: Gt
      rhs:
        attrs:
          pos:
            line: 6
            col: 17
          scope: 1
          tpe: Unspecified
        value:
          Number: 100
group_by: ~
order_by: ~
limit: ~
projection:
  attrs:
    pos:
      line: 7
      col: 14
    scope: 1
    tpe: Unspecified
  value:
    Id: e
