src/tests/snapshots/event_query_lang__tests__parser__parse_from_events_where_subject_project_record_with_count.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice()).unwrap()
---
attrs:
  pos:
    line: 1
    col: 1
  scope: 1
  tpe: Unspecified
sources:
  - binding: e
    kind: Events
predicate:
  attrs:
    pos:
      line: 2
      col: 7
    scope: 1
    tpe: Unspecified
  value:
    Binary:
      lhs:
        attrs:
          pos:
            line: 2
            col: 7
          scope: 1
          tpe: Unspecified
        value:
          Access:
            target:
              attrs:
                pos:
                  line: 2
                  col: 7
                scope: 1
                tpe: Unspecified
              value:
                Id: e
            field: subject
      operator: Eq
      rhs:
        attrs:
          pos:
            line: 2
            col: 20
          scope: 1
          tpe: Unspecified
        value:
          String: /books/42
group_by: ~
order_by: ~
limit: ~
projection:
  attrs:
    pos:
      line: 3
      col: 14
    scope: 1
    tpe: Unspecified
  value:
    Record:
      - name: total
        value:
          attrs:
            pos:
              line: 3
              col: 23
            scope: 1
            tpe: Unspecified
          value:
            App:
              func: COUNT
              args: []
