src/tests/snapshots/event_query_lang__tests__parser__parse_from_events_with_type_to_project_record.snap
---
source: src/tests/parser.rs
expression: parse(tokens.as_slice()).unwrap()
---
attrs:
  pos:
    line: 1
    col: 1
  scope: 1
  tpe: Unspecified
sources:
  - binding: e
    kind: Events
predicate:
  attrs:
    pos:
      line: 2
      col: 7
    scope: 1
    tpe: Unspecified
  value:
    Binary:
      lhs:
        attrs:
          pos:
            line: 2
            col: 7
          scope: 1
          tpe: Unspecified
        value:
          Access:
            target:
              attrs:
                pos:
                  line: 2
                  col: 7
                scope: 1
                tpe: Unspecified
              value:
                Id: e
            field: type
      operator: Eq
      rhs:
        attrs:
          pos:
            line: 2
            col: 17
          scope: 1
          tpe: Unspecified
        value:
          String: io.eventsourcingdb.library.book-acquired
group_by: ~
order_by: ~
limit: ~
projection:
  attrs:
    pos:
      line: 3
      col: 14
    scope: 1
    tpe: Unspecified
  value:
    Record:
      - name: id
        value:
          attrs:
            pos:
              line: 3
              col: 20
            scope: 1
            tpe: Unspecified
          value:
            Access:
              target:
                attrs:
                  pos:
                    line: 3
                    col: 20
                  scope: 1
                  tpe: Unspecified
                value:
                  Id: e
              field: id
      - name: book
        value:
          attrs:
            pos:
              line: 3
              col: 32
            scope: 1
            tpe: Unspecified
          value:
            Access:
              target:
                attrs:
                  pos:
                    line: 3
                    col: 32
                  scope: 1
                  tpe: Unspecified
                value:
                  Access:
                    target:
                      attrs:
                        pos:
                          line: 3
                          col: 32
                        scope: 1
                        tpe: Unspecified
                      value:
                        Id: e
                    field: data
              field: title
